# database-manager

./: .gitignore  README.md  mongo_manager.py  pyproject.toml  requirements.txt
database/: queries.py
schemas/: FILT_RECORDS.js  RAW_RECORDS.js
src/database_manager/database/: mongo.py  mysql.py  queries.py
