[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-manager"
version = "0.1.0"
description = "Database connectors for MongoDB and SQL (via SSH tunnel)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  # ---------- MongoDB ----------
  "motor>=3.7.0",
  "pymongo>=4.6.0",

  # ---------- SQL + SSH ----------
  "SQLAlchemy>=2.0",
  "PyMySQL>=1.1",
  "sshtunnel>=0.4.0",

  # ---------- Data handling ----------
  "pandas>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]