[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-manager"
version = "0.2.1"
description = "Database connectors for MongoDB and SQL (via SSH tunnel)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "motor",
  "pymongo",
  "SQLAlchemy",
  "PyMySQL",
  "sshtunnel",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]